--- a/XShare/Web/XShare.WebForms/Site.Master
+++ b/XShare/Web/XShare.WebForms/Site.Master
@@ -11,7 +11,7 @@
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 </head>
@@ -54,6 +54,11 @@
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Cars/All">Our Cars</a></li>
                         <li><a runat="server" href="~/Reservations/Latest">Reservations</a></li>
+                        <asp:LoginView runat="server" ViewStateMode="Disabled">
+                            <LoggedInTemplate>
+                                <li><a runat="server" href="~/Accident/Report">Report an Accident</a></li>
+                            </LoggedInTemplate>
+                        </asp:LoginView>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
