--- a/XShare/Web/XShare.WebForms/Site.Master
+++ b/XShare/Web/XShare.WebForms/Site.Master
@@ -11,9 +11,10 @@
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+    <meta name="description" content="XShare, car sharing" />
 </head>
 <body>
     <form runat="server">
