Admin manage reservations complex filtering;

--- a/XShare/Web/XShare.WebForms/Content/Site.css
+++ b/XShare/Web/XShare.WebForms/Content/Site.css
@@ -67,3 +67,11 @@ img {
 .no-wrap {
     white-space: nowrap;
 }
+
+.wrap {
+    white-space: normal;
+}
+
+.table > tbody > tr > td, .table > tbody > tr > th{
+     vertical-align: middle;
+}
