Someway OK site map

--- a/XShare/Web/XShare.WebForms/Content/Site.css
+++ b/XShare/Web/XShare.WebForms/Content/Site.css
@@ -75,3 +75,7 @@ img {
 .table > tbody > tr > td, .table > tbody > tr > th{
      vertical-align: middle;
 }
+
+footer {
+    margin-top: 0 !Important;
+}
