--- a/XShare/Web/XShare.WebForms/Site.Master
+++ b/XShare/Web/XShare.WebForms/Site.Master
@@ -109,16 +109,18 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
+            <div>
+                <asp:Menu ID="NavigationMenu" runat="server" SkipLinkText=""
+                    DataSourceID="SiteMapDataSource"
+                    StaticDisplayLevels="2"
+                    RenderingMode="Default"
+                    StaticMenuStyle-CssClass="StaticMenuStyle"
+                    StaticMenuItemStyle-CssClass="StaticMenuItemStyle">
+                </asp:Menu>
+            </div>
+            <asp:SiteMapDataSource ID="SiteMapDataSource" runat="server" />
             <footer>
                 <p class="text-center">&copy; <%: DateTime.Now.Year %> - Teletik Academy Teamwork</p>
-                <div class="clear hideSkiplink">
-                    <asp:Menu ID="NavigationMenu" runat="server" SkipLinkText=""
-                        EnableViewState="False" IncludeStyleBlock="True" Orientation="Horizontal"
-                        DataSourceID="SiteMapDataSource" StaticDisplayLevels="2">
-                    </asp:Menu>
-                    <asp:SiteMapPath ID="SiteMapPathBreadcrump" runat="server" />
-                </div>
-                <asp:SiteMapDataSource ID="SiteMapDataSource" runat="server" />
             </footer>
         </div>
     </form>
