--- a/XShare/Web/XShare.WebForms/Controls/Confirmator/Styles/Confirmator.css
+++ b/XShare/Web/XShare.WebForms/Controls/Confirmator/Styles/Confirmator.css
@@ -1,4 +1,14 @@
 ﻿.modal-dialog {
-    -ms-opacity: 0.9;
-    opacity: 0.9
+    -ms-opacity: 0.92;
+    opacity: 0.92;
+}
+
+.noselect {
+    -webkit-touch-callout: none !important; /* iOS Safari */
+    -webkit-user-select: none !important;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none !important;  /* Konqueror */
+    -moz-user-select: none !important; /* Firefox */
+    -ms-user-select: none !important; /* IE/Edge */
+    user-select: none !important;/* non-prefixed version, currently
+                                  not supported by any browser */
 }
