--- a/XShare/Web/XShare.WebForms/Controls/Confirmator/Styles/Confirmator.css
+++ b/XShare/Web/XShare.WebForms/Controls/Confirmator/Styles/Confirmator.css
@@ -5,10 +5,16 @@
 
 .noselect {
     -webkit-touch-callout: none !important; /* iOS Safari */
-    -webkit-user-select: none !important;   /* Chrome/Safari/Opera */
-    -khtml-user-select: none !important;  /* Konqueror */
+    -webkit-user-select: none !important; /* Chrome/Safari/Opera */
+    -khtml-user-select: none !important; /* Konqueror */
     -moz-user-select: none !important; /* Firefox */
     -ms-user-select: none !important; /* IE/Edge */
-    user-select: none !important;/* non-prefixed version, currently
+    user-select: none !important; /* non-prefixed version, currently
                                   not supported by any browser */
+}
+
+.wtap-words {
+    overflow: hidden !important;
+    -moz-text-overflow: ellipsis;
+    text-overflow: ellipsis;
 }
